Obsługa powrotu z edycji bez zapisu

--- a/www/index.html
+++ b/www/index.html
@@ -242,7 +242,7 @@
         <!-- Edit Announcement page -->
         <div data-role="page" id="editAnnoun">
             <div data-role="header" class="header">
-                <a href="#startPage" class="ui-btn ui-corner-all ui-icon-arrow-l ui-btn-icon-notext backbutt"></a>
+                <button  id="myDetailBackButton" class="ui-btn ui-icon-arrow-l ui-btn-icon-left ui-btn-icon-notext backbutt" onclick="goToSite('MyAnnDetailsPage')"></button>
                 <h1 id="editAnnHed">Edycja ogłoszenia</h1>
             </div>
           
