Updated edit profile view and added method to display current user data

--- a/www/index.html
+++ b/www/index.html
@@ -317,8 +317,13 @@
             </div>
 
             <div data-role="main" class="ui-content">
-                Poniżej możesz wpisać nowy nick
-                    <input type="text" placeholder="Nick" id="nickprof"/>
+                <br>
+                Adres e-mail:
+                <p id="currentEmail">e-mail</p>
+                Obecny nick:
+                <p id="currentNick">nick</p>
+                Zmień nick:
+                <input type="text" placeholder="Nick" id="nickprof"/>
             </div>
 
             <div data-role="footer" data-position="fixed" id="footerEditProfile">
