--- a/www/index.html
+++ b/www/index.html
@@ -234,7 +234,7 @@
             </div>
 
             <div data-role="footer" data-position="fixed" id="myDetailsFooter">
-                <button class="ui-btn" id="odwolaj">Odwołaj</button>  
+                <button class="ui-btn" id="odwolaj" onclick="changeStatus()">Odwołaj</button>  
                 <button class="ui-btn" id="edytuj" onclick="goToSite('editAnnoun')">Edytuj</button>                
             </div>
         </div>
@@ -269,7 +269,7 @@
                 </div>
             </div>
             <div data-role="footer" data-position="fixed" id="footerEditAnn">
-                <button class="ui-btn" id="deleteBtnEditAnn">Odwołaj</button> 
+                <button class="ui-btn" id="deleteBtnEditAnn" onclick="changeStatus()">Odwołaj</button> 
                 <button class="ui-btn" id="cancBtnEditAnn" onclick="goToSite('MyAnnDetailsPage')">Anuluj</button> 
                 <button class="ui-btn" id="saveBtnEditAnn">Zapisz zmiany</button>               
             </div>
