--- a/www/index.html
+++ b/www/index.html
@@ -235,7 +235,7 @@
 
             <div data-role="footer" data-position="fixed" id="myDetailsFooter">
                 <button class="ui-btn" id="odwolaj" onclick="changeStatus()">Odwołaj</button>  
-                <button class="ui-btn" id="edytuj" onclick="goToSite('editAnnoun')">Edytuj</button>                
+                <button class="ui-btn" id="edytuj" onclick="getAnn()">Edytuj</button>                
             </div>
         </div>
       
