Read data - finish

--- a/www/index.html
+++ b/www/index.html
@@ -271,7 +271,7 @@
             <div data-role="footer" data-position="fixed" id="footerEditAnn">
                 <button class="ui-btn" id="deleteBtnEditAnn" onclick="changeStatus()">Odwołaj</button> 
                 <button class="ui-btn" id="cancBtnEditAnn" onclick="goToSite('MyAnnDetailsPage')">Anuluj</button> 
-                <button class="ui-btn" id="saveBtnEditAnn">Zapisz zmiany</button>               
+                <button class="ui-btn" id="saveBtnEditAnn" onclick="saveChanges()">Zapisz zmiany</button>               
             </div>
         </div>
 
