--- a/www/index.html
+++ b/www/index.html
@@ -264,7 +264,7 @@
                     <input type="text" placeholder="np. Paw. A, piętro 2" id="placeEditAnn"/>
                     <hr>
                     Krótki opis (max. 150 znaków)
-                    <textarea name="descEditAnn" maxlength="150" rows="6" placeholder="Opisz krótko cel spotkania"></textarea> 
+                    <textarea name="descEditAnn" id="descEditAnn" maxlength="150" rows="6" placeholder="Opisz krótko cel spotkania"></textarea> 
                     <hr>
                 </div>
             </div>
