Add start notification about notification

--- a/www/index.html
+++ b/www/index.html
@@ -130,7 +130,7 @@
         <!-- Main page - added -->
         <div data-role="page" id="mainAdd">
             <div data-role="header" class="header">
-                <a href="#sideMenu1" class="ui-btn ui-corner-all ui-icon-bars ui-btn-icon-notext menubtn" data-role="button" role="button"></a>
+                <a href="#sideMenu1" class="ui-btn ui-corner-all ui-icon-bars ui-btn-icon-notext menubtn" data-role="button" role="button"><div class="notifyStar">*</div></a>
                 <h1 id="mainAddHeader">LearnWithMe</h1>
                 <div data-role="controlgroup" id="controlBtnsAd" class="btn-group">
                   <button class="ui-btn" id="allAd" onclick="getAllAnn()">Ogłoszenia</button>
