after regestration page design changed

--- a/www/index.html
+++ b/www/index.html
@@ -82,12 +82,10 @@
                 <div id="aftRegCom">
                   <h2>Sukces!</h2>
                   <p>Gratulacje!<br>
-                    Twoje konto zostało poprawnie utworzone.<br>
-                    Możesz przejść do serwisu klikając w poniższy przycisk.
+                    Twoje konto zostało poprawnie utworzone.
                   </p>
                 </div>
-                <img src="img/downarr.png" id="downArrow"/>
-                <button class="ui-btn ui-corner-all" id="przejdzDoSerwisu" onclick="getAllAnn()">Przejdź do serwisu</button>
+                <img src="img/ook.png" id="downArrow"/>
             </div>
         </div>
 
