Remove function from login and signup buttons

--- a/www/index.html
+++ b/www/index.html
@@ -87,7 +87,7 @@
                   </p>
                 </div>
                 <img src="img/downarr.png" id="downArrow"/>
-                <button class="ui-btn ui-corner-all" id="przejdzDoSerwisu" onclick="getAllAnn()">Przejdź do serwisu</button>
+                <button class="ui-btn ui-corner-all" id="przejdzDoSerwisu" onclick="goToSite('mainAll')">Przejdź do serwisu</button>
             </div>
         </div>
 
